Remote Store Parquet Upload and Replication Implementation (#19898)
* Added composite directories and updated replication flow for parquet

Signed-off-by: Kamal Nayan <askkamal@amazon.com>
Co-authored-by: Kamal Nayan <askkamal@amazon.com>